--- a/client/404.html
+++ b/client/404.html
@@ -5,14 +5,13 @@
 
 <head>
     <meta charset='utf-8' />
-    <title>Skindigo Routine Builder</title>
+    <title>404 - File Not Found!</title>
 
     <!-- FAVICON -->
     <!-- FONT -->
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/default-styles.css">
     <!-- SCRIPT -->
-    <script src="/src/getModule.js"></script>
 </head>
 
 
@@ -22,8 +21,8 @@
 
     <!-- MAIN  -->
     <main>
-        <h1>Welcome to Skindigo</h1>
-        <p>Skindigo is a skincare app that helps you figure out your skin needs. Not only can you track and post the products you use, but you can also see what products people with your skintype use as well. </p>
+        <h1>404 - File Not Found!</h1>
+        <p>Check your URL, or your typing!!</p>
     </main>
 
     <!-- CONTROLS  -->
@@ -37,17 +36,6 @@
             <li><a href="/admin.html">Admin Page</a></li>
         </ul>
     </aside>
-
-    <section>
-        <h2>Admin Page</h2>
-        <button id="btnRoutine">Show a Routine</button>
-        <div id="routines">
-
-        </div>
-        <div id="responseCodes">
-
-        </div>
-    </section>
 
     <!-- FOOTER  -->
     <footer>
