--- a/client/404.html
+++ b/client/404.html
@@ -8,7 +8,9 @@
     <title>404 - File Not Found!</title>
 
     <!-- FAVICON -->
-    <!-- FONT -->
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Delius&family=Reenie+Beanie&family=Tenor+Sans&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/default-styles.css">
     <!-- SCRIPT -->
@@ -21,21 +23,21 @@
 
     <!-- MAIN  -->
     <main>
-        <h1>404 - File Not Found!</h1>
-        <p>Check your URL, or your typing!!</p>
+        <img id= "bubbly" src="/bubbles.png" alt="Icon of bubbles"><h1>Skindigo</h1>
+        <h2>404 - File Not Found!</h2>
+        <p id="desc">Check your URL, or your typing!!</p>
     </main>
 
     <!-- CONTROLS  -->
-    <aside id="links ">
-        <h2>Site traversal</h2>
+    <nav id="links">
         <ul id="navigation">
-            <li><a href="/home.html">Home</a></li>
-            <li><a href="/information.html">Routine Guide</a></li>
-            <li><a href="/app.html">Routine App</a></li>
-            <li><a href="/input.html">Routine Builder</a></li>
-            <li><a href="/admin.html">Admin Page</a></li>
+            <li class="navLink"><a href="/home.html">HOME</a></li>
+            <li class="navLink"><a href="/information.html">WHERE DO I START?</a></li>
+            <li class="navLink"><a href="/app.html">ROUTINE APPE</a></li>
+            <li class="navLink"><a href="/input.html">ROUTINE BUILDER</a></li>
+            <li class="navLink"><a href="/admin.html">ADMIN PAGE</a></li>
         </ul>
-    </aside>
+    </nav>
 
     <!-- FOOTER  -->
     <footer>
