--- a/client/information.html
+++ b/client/information.html
@@ -9,6 +9,8 @@
 
     <!-- FAVICON -->
     <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Delius&family=Reenie+Beanie&family=Tenor+Sans&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/default-styles.css">
     <!-- SCRIPT -->
@@ -21,75 +23,73 @@
 
     <!-- MAIN  -->
     <main>
-        <h1>Welcome to Skindigo</h1>
-        <p>Skindigo is a skincare app that helps you figure out your skin needs. Not only can you track and post the products you use, but you can also see what products people with your skintype use as well. </p>
+        <img id= "bubbly" src="/bubbles.png" alt="Icon of bubbles"><h1>Skindigo</h1>
+        <p id="desc">Skindigo is a skincare app that helps you figure out your skin needs. Not only can you track and post the products you use, but you can also see what products people with your skintype use as well. </p>
     </main>
 
     <!-- CONTROLS  -->
-    <aside id="links ">
-        <h2>Site traversal</h2>
+    <nav id="links">
         <ul id="navigation">
-            <li><a href="/home.html">Home</a></li>
-            <li><a href="/information.html">Routine Guide</a></li>
-            <li><a href="/app.html">Routine App</a></li>
-            <li><a href="/input.html">Routine Builder</a></li>
-            <li><a href="/admin.html">Admin Page</a></li>
+            <li class="navLink"><a href="/home.html">HOME</a></li>
+            <li class="navLink" id="active"><a href="/information.html">WHERE DO I START?</a></li>
+            <li class="navLink"><a href="/app.html">ROUTINE APP</a></li>
+            <li class="navLink"><a href="/input.html">ROUTINE BUILDER</a></li>
+            <li class="navLink"><a href="/admin.html">ADMIN PAGE</a></li>
         </ul>
-    </aside>
+    </nav>
 
     <!-- ARTICLE  -->
     <article>
         <h2>What is the bare minimum you need in your Routine?</h2>
-        <h3>Cleanser [★☆☆]</h3>
-        <p>It's a good idea to use a cleanser at night, to wash off the gunk that builds up throughout the day. In the morning, depending on your skin's needs, you can use a cleanser or simply rinse with water. </p>
-        <p>A good cleanser is one that leaves your skin feeling <b>soft and maybe a bit moisturized</b> - not dry, tight, or ‘squeaky clean.’</p>
+        <h3><b><u>Cleanser [★☆☆]</u></b></h3>
+        <p>It's a good idea to use a cleanser at night, to wash off the gunk that builds up throughout the day. In the morning, you can use a cleanser or simply rinse with water. </p>
+        <p><u><b>A good cleanser is one that leaves your skin feeling soft and maybe a bit moisturized</b></u> - not dry, tight, or ‘squeaky clean.’</p>
         <p>Some things to consider when evaluating how well your cleanser is working: </p>
-        <ul>
+        <ol>
             <li>Do you feel product leftover after cleansing? If so, you may want to find a different cleanser or add a first cleanser like micellar water or oil cleansing!</li>
 
             <li>Does your face feel calm & soft? Great! Sounds like you’ve found a nice gentle cleanser.</li>
 
             <li>Does your skin feel irritated, tight, dry, or ‘squeaky clean’ after cleansing? Drop it and find a gentler cleanser!
             </li>
-        </ul>
+        </ol>
 
-        <p>If your cleanser is gentle enough, doesn't break you out, and does what it's supposed to do, that's awesome! Go ahead and enjoy it as part of your skincare routine :) If it turns out that your product irritates your skin, gives you acne, or doesn't
+        <p>If your cleanser is <u><b>gentle</b></u> enough, doesn't break you out, and does what it's supposed to do, that's awesome! If it turns out that your product irritates your skin, gives you acne, or doesn't
             do what it should, it might be time to try a different one!
         </p>
-        <p>Gentle cleansers are best with an acidic pH of no more than pH 5.6. Try and pay attention to cleansers that list the pH value on their website or bottle!</p>
+        <p>Gentle cleansers are best with an <u><b>acidic pH of no more than pH 5.6.</b></u> Try and pay attention to cleansers that list the pH value on their website or bottle!</p>
 
         <p>All information is grabbed from this
-            <a href 'https://www.reddit.com/r/SkincareAddiction/wiki/cleanser_recs'>page</a>. There you will find even more information that may help you in your search for a cleanser!</p>
-        <h3>Moisturizer [★☆☆]</h3>
-        <p>A good moisturizer nourishes the skin and improves our skin's barrier. That helps treat and prevent obvious things like dryness, but also less-obvious concerns like oiliness, acne, fine lines, and leftover acne marks. It’s especially important
-            to have a good moisturizer (or a few!) if you plan on using any potentially irritating actives in the future.</p>
+            <a href = 'https://www.reddit.com/r/SkincareAddiction/wiki/cleanser_recs'>page</a>. There you will find even more information that may help you in your search for a cleanser!</p>
+        <h3><b><u>Moisturizer [★☆☆]</u></b></h3>
+        <p><u><b>A good moisturizer nourishes the skin and improves our skin's barrier.</b></u> It helps treat and prevent obvious things like dryness, but also less-obvious concerns like oiliness, acne, fine lines, and leftover acne marks. </p>
         <p>Some things to consider when evaluating how well your moisturizer is working: </p>
-        <ul>
+        <ol>
             <li>Does it leave your skin feeling bouncy and supple? Happy and healthy, not dry and tight, is what a good moisturizer is aiming for.</li>
 
             <li>How long does that moisturized feeling last? If it only lasts an hour or two, you may want to find a different moisturizer! Perhaps try a thicker moisturizer, like a cream or a balm.</li>
-        </ul>
+        </ol>
 
-        <p>If your moisturizer is gentle enough, doesn't break you out, and does what it's supposed to do, that's awesome! Go ahead and enjoy it as part of your skincare routine :) </p>
+        <p>If your moisturizer is <b><u>gentle</u></b> enough, doesn't break you out, and does what it's supposed to do, that's awesome! </p>
         <p>If it turns out that your product irritates your skin, gives you acne, or doesn't do what it should, it might be time to try a different one!</p>
 
         <p>All information is grabbed from this
-            <a href 'https://www.reddit.com/r/SkincareAddiction/wiki/moisturizer_recs'>page</a>. There you will find even more information that may help you in your search for a moisturizer!</p>
-        <h3>Sunscreen [★☆☆]</h3>
-        <p>Whenever we're exposed to the sun, it affects our skin in different ways. Some are good - it can boost our mood and influences our sleep-wake rhythm. But some are more harmful; it causes skin cancer and sunburns, as well as fine lines and hyperpigmentation.
+            <a href = 'https://www.reddit.com/r/SkincareAddiction/wiki/moisturizer_recs'>page</a>. There you will find even more information that may help you in your search for a moisturizer!</p>
+        <h3><b><u>Sunscreen [★☆☆]</u></b></h3>
+        <p>Whenever we're exposed to the sun, it affects our skin in different ways. Some UV exposure is good - it can boost our mood and influences our sleep-wake rhythm. <b><u>But anymore is harmful; it causes skin cancer and sunburns, as well as fine lines and hyperpigmentation.</u></b>
         </p>
         <p>Sunscreens can be hard to evaluate since they’re about prevention, but some things to consider may include: </p>
-        <ul>
+        <ol>
             <li>Does it have adequate UV protection? (SPF 30+ for UVB)</li>
             <li>Is it easy and comfortable to wear.</li>
             <li>Is your hyperpigmentation worsening, or are you developing new freckles/dark spots? If so, you may need a sunscreen with higher protection!.</li>
-        </ul>
+        </ol>
 
-        <p>If your sunscreen is gentle enough, doesn't break you out, and does what it's supposed to do, that's awesome! Go ahead and enjoy it as part of your skincare routine :) </p>
+        <p>If your sunscreen is <b><u>gentle</u></b> enough, doesn't break you out, and does what it's supposed to do, that's awesome!</p>
         <p>If it turns out that your product irritates your skin, gives you acne, or doesn't do what it should, it might be time to try a different one!</p>
 
         <p>All information is grabbed from this
-            <a href 'https://www.reddit.com/r/SkincareAddiction/wiki/sunscreen'>page</a>. There you will find even more information that may help you in your search for a sunscreen!</p>
+            <a href = 'https://www.reddit.com/r/SkincareAddiction/wiki/sunscreen'>page</a>. There you will find even more information that may help you in your search for a sunscreen!</p>
     </article>
 
     <!-- FOOTER  -->
