--- a/client/admin.html
+++ b/client/admin.html
@@ -56,7 +56,7 @@
                     <p><b>Sunscreen:</b> ${obj[0].sunscreen}</p>`;
 
             } 
-            else if (newObj.length>=1)
+            else if (obj["temp"] && newObj.length>=1)
             {
                 container.innerHTML = "";
                 for (let i = 0; i < newObj.length; i += 1) {
